소소한것들

--- a/src/main/resources/static/user/assets/css/custom-style.css
+++ b/src/main/resources/static/user/assets/css/custom-style.css
@@ -166,6 +166,7 @@ body{
     background-color: black;
     color: white;
     text-align: center;
+    border: none !important;
 }
 
 @media (min-width: 950px) {
