fix: summernote bs5 대응

--- a/src/main/resources/static/user/assets/css/custom-style.css
+++ b/src/main/resources/static/user/assets/css/custom-style.css
@@ -360,3 +360,7 @@ div.card .card-body[data-same-height='true'] .card-text {
 .btn-hover-white:hover {
     color: white !important;
 }
+
+.note-btn.dropdown-toggle:after {
+    content: none;
+}
