--- a/src/main/resources/templates/admin/content/pages/contents/create.html
+++ b/src/main/resources/templates/admin/content/pages/contents/create.html
@@ -3,12 +3,12 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org">
 
 <th:block layout:fragment="css">
-	<!--	<link rel="stylesheet" th:href="@{/user/assets/css/style.css}">-->
 	<link rel="stylesheet" th:href="@{/user/assets/css/custom-style.css}">
 	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
 </th:block>
+
 <th:block layout:fragment="script">
-	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+	<script th:src="@{/admin/js/summernote.js}"></script>
 </th:block>
 
 <div layout:fragment="content">
@@ -137,7 +137,7 @@
                                     }
                                 }
                             }
-                        }
+                        },
                     });
                 });
 
