--- a/src/main/resources/templates/admin/content/pages/notice/create.html
+++ b/src/main/resources/templates/admin/content/pages/notice/create.html
@@ -7,8 +7,9 @@
 	<link rel="stylesheet" th:href="@{/user/assets/css/custom-style.css}">
 	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
 </th:block>
+
 <th:block layout:fragment="script">
-	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+	<script th:src="@{/admin/js/summernote.js}"></script>
 	<script src="/admin/js/summernote-image-attributes.js"></script>
 	<script src="/admin/js/summernote-image-attributes-KR.js"></script>
 </th:block>
