--- a/src/main/resources/templates/admin/layout/default_layout.html
+++ b/src/main/resources/templates/admin/layout/default_layout.html
@@ -16,9 +16,9 @@
 
 	<!-- include libraries(jQuery, bootstrap) -->
 	<script type="text/javascript" src="//code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-	        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-	        crossorigin="anonymous"></script>
+	<!--	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"-->
+	<!--	        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"-->
+	<!--	        crossorigin="anonymous"></script>-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 	      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -26,7 +26,7 @@
 	        crossorigin="anonymous"></script>
 
 	<link th:href="@{/admin/css/styles.css}" rel="stylesheet"/>
-	<script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+	<!--	<script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>-->
 
 	<script th:src="@{/user/assets/js/interest-tag.js}"></script>
 
@@ -47,7 +47,7 @@
 
 </head>
 <body class="sb-nav-fixed">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>-->
 
 <div th:replace="~{/admin/fragments/header :: headerFragment}"></div>
 
