summernote full-screen 삭제

--- a/src/main/resources/static/user/assets/css/custom-style.css
+++ b/src/main/resources/static/user/assets/css/custom-style.css
@@ -364,3 +364,7 @@ div.card .card-body[data-same-height='true'] .card-text {
 .note-btn.dropdown-toggle:after {
     content: none;
 }
+
+button[data-bs-original-title="Full Screen"] {
+    display: none;
+}
