--- a/src/main/resources/templates/user/content/pages/shop-detail.html
+++ b/src/main/resources/templates/user/content/pages/shop-detail.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/user/layout/default_layout}" lang="ko">
-<!--<script>-->
-
 
 <div layout:fragment="content" class="content">
 	<style>
@@ -43,7 +41,7 @@
             }
         }
 	</style>
-	<div class="section" style="padding-top: 2em !important;">>
+	<div class="section" style="padding-top: 2em !important;">
 		<div class="container">
 
 			<script type="text/javascript"
