--- a/src/main/resources/templates/user/content/pages/my-page/notice.html
+++ b/src/main/resources/templates/user/content/pages/my-page/notice.html
@@ -25,7 +25,7 @@
 			</ul>
 
 			<th:block th:if="${noticeList.size() == 0}">
-				<div class="text-center mt-5">
+				<div class="text-center p-5">
 					공지사항이 없습니다.
 				</div>
 			</th:block>
